--- a/public/index.html
+++ b/public/index.html
@@ -8,7 +8,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Web site created using create-react-app"
+      content="Smartbrain is a web app that detects faces in an image provided to it. It is built using modern web development libraries and frameworks with React in frontend and NodeJS in backend. The database used is postgresql. The app uses clarifai's machine learning and deep learning API to detect faces in an image provided to it."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
