--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.svg" />
-    <!-- <link rel="icon" href="%PUBLIC_URL%/favicon.ico" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Smartbrain is a web app that detects faces in an image provided to it. It is built using modern web development libraries and frameworks with React in frontend and NodeJS in backend. The database used is postgresql. The app uses clarifai's machine learning and deep learning API to detect faces in an image provided to it."
+      content="Smartast is a web app that detects faces in an image provided to it. It is built using modern web development libraries and frameworks with React in frontend and NodeJS in backend. The database used is postgresql. The app uses clarifai's machine learning and deep learning API to detect faces in an image provided to it."
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
@@ -25,7 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Smart Brain</title>
+    <title>Smartast</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
